# Parolu

./: .gitmodules  README.md  dummy.txt  im.bernard.Parolu.json  meson.build  parolu.gresource  python-deps.json  python-flatpak-deps.json  requirements.txt
.flatpak-builder/cache/refs/heads/x86_64-im.bernard.Parolu.json/: build-desktop-file  build-espeak  build-espeak-ng  build-gst-plugins  build-onnxruntime  build-piper  build-piper-model-kerstin  build-piper-python  build-piperphonemize  build-pybind11  build-python-flatpak-deps  build-python3-gtts  build-python3-headers  build-python3-headers-2  build-python3-pygame  build-python3-pyttsx4  build-spdlog  init
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/0/c/: cab0kjpgblugan6ip0vm67ifpiqfh7aR
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/1/7/: e1ud5j3alv2ets1kpu32l1vklvoruioR
.flatpak-builder/ccache/3/5/: ba4apup0lj5ofhh2bor9l55oenuor1sM
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/4/0/: 9fboqleji5b90rqdfodsrm3m0o637aiR
.flatpak-builder/ccache/4/6/: 104387a7n04jo0ucrk3v3l4bjm547msR
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/6/3/: a80hnhl29b1ms8tnam9e9rd0lqherd2R
.flatpak-builder/ccache/9/: stats
.flatpak-builder/ccache/9/a/: 49er2br36rm0k21en4kbjs3evnsbsq0M
.flatpak-builder/ccache/9/d/: 5f8aq7b84icubjbfardn04qhobmjbo4M
.flatpak-builder/ccache/f/: stats
.flatpak-builder/ccache/f/4/: aar9e1pbmep7eh9m5qan6g9cn48i6mkM
.flatpak-builder/ccache/f/6/: 174jiqonrgmopo0u6urg8jr61mh62fkM
.flatpak-builder/checksums/: x86_64-im.bernard.Parolu.json
.flatpak-builder/downloads/15342e551b452a049a2389765fee96306718a6974ded750fc244efbcb4007fd0/: pyttsx4-3.0.15-py3-none-any.whl
.flatpak-builder/git/https_github.com_pybind_pybind11.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_pybind_pybind11.git/objects/pack/: pack-3db6ab85fbc74826989ba2db1260d75b999e09cd.idx  pack-3db6ab85fbc74826989ba2db1260d75b999e09cd.pack  pack-3db6ab85fbc74826989ba2db1260d75b999e09cd.rev  pack-ffa1057f3c1706c100f3beff9adb3d4744d21f44.idx  pack-ffa1057f3c1706c100f3beff9adb3d4744d21f44.pack  pack-ffa1057f3c1706c100f3beff9adb3d4744d21f44.rev
.flatpak-builder/git/https_github.com_pybind_pybind11.git/refs/tags/: v2.11.1
.flatpak-builder/git/https_github.com_rhasspy_piper.git/: FETCH_HEAD  config
.flatpak-builder/git/https_github.com_rhasspy_piper.git/objects/pack/: pack-d89edae5a91557dce2adf231184ad8851ed25ac2.idx  pack-d89edae5a91557dce2adf231184ad8851ed25ac2.rev
.flatpak-builder/git/https_github.com_rhasspy_piper.git/refs/heads/: master
avenv/: pyvenv.cfg
data/: im.bernard.Parolu.desktop  im.bernard.Parolu.desktop.in  im.bernard.Parolu.gresource.xml  im.bernard.Parolu.gschema.xml  im.bernard.Parolu.metainfo.xml.in  meson.build  window.ui
data/icons/: meson.build
parolu-flatpak-test/parolu/src/: main.py  reader.py
patches/: CMakeLists.txt  espeak.patch  meson.build  piper-install-lib.patch  piper_api.cpp  piperphonemize.patch
po/: POTFILES  meson.build
src/: main.py  meson.build  parolu.gresource.xml  parolu.in  piper.cpp  piper.hpp  pipervoice.py  reader.py  window.py  window.ui
subprojects/: meson.build  pybind11.wrap
subprojects/piper-src/: CMakeLists.txt  meson.build
subprojects/piper-src/src/cpp/: CMakeLists.txt  piper.cpp  piper.hpp
subprojects/pybind11-2.13.5/: .meson-subproject-wrap-hash.txt
